--- a/memoria/refs.bib
+++ b/memoria/refs.bib
@@ -38,3 +38,9 @@
   url          = {https://pmanzoni.notion.site/LAB-6-REST-d487dab1b7e24d56b31d8e552a480888},
   note         = {Notion}
 }
+@misc{abelharo2024lectura,
+  author       = {A. Haro},
+  title       =  {Lectura de llaves RFID-RC522},
+  year        = {2024},
+  url         = {https://github.com/AbelHaro/Lectura-de-llaves-RFID-RC522}
+},
