--- a/memoria/Lectura de llaves RFID-RC522.tex
+++ b/memoria/Lectura de llaves RFID-RC522.tex
@@ -81,7 +81,11 @@
 \section{Introducción}
 
 Este proyecto consiste en desarrollar un sistema de control de acceso utilizando tecnología RFID (lector RFID-RC522).
-El sistema permitirá registrar usuarios y controlar su acceso mediante llaves y tarjetas RFID. Para el cambio de modo del lector, entre registro o acceso, se utilizará comunicación Bluetooth. Los usuarios registrados y los accesos se mantendrán en una base de datos accesible mediante una API REST dentro de un contenedor. Para la visualización se utilizará Ubidots.
+El sistema permitirá registrar usuarios y controlar su acceso mediante llaves y tarjetas RFID. 
+Para el cambio de modo del lector, entre registro o acceso, se utilizará comunicación Bluetooth. 
+Los usuarios registrados y los accesos se mantendrán en una base de datos accesible mediante una API REST dentro de un contenedor. 
+Para la visualización se utilizará Ubidots.
+Todo el proyecto se encuentra en un repositorio de GitHub \href{https://github.com/AbelHaro/Lectura-de-llaves-RFID-RC522}{Lectura de llaves RFID-RC522} \cite{abelharo2024lectura}.
 
 \begin{figure}[H]
 \centering
@@ -758,7 +762,7 @@ DISPOSITIVE_NAME = '' # Device name in Ubidots
 URL_UBIDOTS = f'http://industrial.api.ubidots.com/api/v1.6/devices/{DISPOSITIVE_NAME}/'
 TOKEN_UBIDOTS = '' # Token of the API
 \end{lstlisting}
-
+\captionof{figure}{Código del archivo \texttt{``api/ubidots\_conf.py''} del servidor.}
 
 \section{Problemas encontrados}
 En los siguientes apartados se describen los problemas encontrados durante la realización del proyecto y las soluciones propuestas:
