Traducción a inglés memoria

--- a/memoria/refs.bib
+++ b/memoria/refs.bib
@@ -1,18 +1,18 @@
-@online{computadoras2022rfid,
+@online{computadoras2022rfid,  
   author       = {Computadoras y Sensores},
   title        = {RFID RC522 con Raspberry Pi Pico y Códigos en MicroPython para simple Control de Acceso},
   year         = {2022},
   month        = sep,
   day          = {13},
   url          = {https://www.youtube.com/watch?v=bvn_o39uXac},
-  note         = {Archivo de video}
+  note         = {Video File}
 }
 @misc{danjperron2022mfrc522,
   author       = {Daniel Perron},
   title        = {MicroPython MFRC522 Library},
   year         = {2022},
   url          = {https://github.com/danjperron/micropython-mfrc522/blob/master/mfrc522.py},
-  note         = {Repositorio GitHub}
+  note         = {GitHub Repository}
 }
 @online{sam2023ble,
   author       = {Sam},
@@ -21,7 +21,7 @@
   month        = nov,
   day          = {18},
   url          = {https://www.youtube.com/watch?v=zvJ9SnAg6jU},
-  note         = {Archivo de video}
+  note         = {Video File}
 }
 
 @misc{micropythonBluetoothExamples,
@@ -29,7 +29,7 @@
   title        = {MicroPython Bluetooth Examples},
   year         = {2023},
   url          = {https://github.com/micropython/micropython/tree/master/examples/bluetooth},
-  note         = {Repositorio GitHub}
+  note         = {GitHub Repository}
 }
 @misc{manzoni2024lab6,
   author       = {P. Manzoni},
@@ -40,7 +40,8 @@
 }
 @misc{abelharo2024lectura,
   author       = {A. Haro},
-  title       =  {Lectura de llaves RFID-RC522},
+  title       =  {RFID-RC522 Key Reading},
   year        = {2024},
-  url         = {https://github.com/AbelHaro/Lectura-de-llaves-RFID-RC522}
-},
+  url         = {https://github.com/AbelHaro/RFID-RC522-Key-Reading},
+  note        = {GitHub Repository}
+}
