--- a/memoria/RFID-RC522 Key Reading.tex
+++ b/memoria/RFID-RC522 Key Reading.tex
@@ -91,6 +91,7 @@ To switch the reader mode between registration and access, Bluetooth communicati
 Registered users and accesses will be stored in a database accessible via a REST API within a container. 
 For visualization, Ubidots will be used.
 The entire project is available in a GitHub repository \href{https://github.com/AbelHaro/RFID-RC522-Key-Reading}{RFID-RC522 Key Reading} \cite{abelharo2024lectura}.
+The demo video is available on YouTube \href{https://youtu.be/6qB3aYBnV1Q}{demo RFID-RC522 Key Reading}.
 
 \begin{figure}[H]
 \centering
